[package]
name = "grafton-config"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2"
lazy_static = "1"
regex = "1"
serde_json = "1"
thiserror = "1"

[dependencies.figment]
features = ["env", "toml"]
version = "*"

[dependencies.strum]
features = ["derive"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "1"
