[package]
name = "grafton-config"
version = "0.1.0"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Load configuration from toml files with token variable expansion and environment overrides"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton"
homepage = "https://www.grafton.ai"
categories = ["config"]
keywords = ["configuration", "config", "settings"]
publish = false
include = ["Cargo.toml", "src/**/*"]

[dependencies]
derivative = "2"
lazy_static = "1"
regex = "1"
serde_json = "1"
thiserror = "1"
once_cell = "1"

[dependencies.figment]
features = ["env", "toml"]
version = "*"

[dependencies.strum]
features = ["derive"]
version = ">=0.26.1"

[dependencies.serde]
features = ["derive"]
version = "1"
