[package]
name = "grafton-config"
version = "0.1.1"
edition = "2021"
authors = ["Grant Sparks <grant@grafton.ai>"]
description = "Load configuration from toml files with token variable expansion and environment overrides"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-config"
homepage = "https://www.grafton.ai"
categories = ["config"]
keywords = ["configuration", "config", "settings"]
include = ["Cargo.toml", "src/**/*"]
readme = "readme.md"

[dependencies]
derivative = "2.2.0"
lazy_static = "1.5.0"
regex = "1.10.5"
serde_json = "1.0.120"
thiserror = "1.0.61"
once_cell = "1.19.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
